feat: Implement DELETE/roots/:dirId endpoint
